--- a/templates/home/content.html.twig
+++ b/templates/home/content.html.twig
@@ -12,8 +12,6 @@
 				<!-- heading -->
 				<div class="d-flex justify-content-between align-items-center mb-3">
 					<div>
-
-
 						<h4 class="mb-0">MARKETEURS</h4>
 					</div>
 					<div class="icon-shape icon-md bg-light  rounded-1">
@@ -22,7 +20,9 @@
 				</div>
 				<!-- project number -->
 				<div>
-					<h1 class="fw-bold">{{Users}}</h1>
+					<a href="{{path('Userslist')}}">
+						<h1 class="fw-bold">{{Users}}</h1>
+					</a>
 					<p
 						class="mb-0">{# <span class="text-dark me-2"></span>Completed #}
 					</p>
