--- a/templates/home/nav.html.twig
+++ b/templates/home/nav.html.twig
@@ -25,10 +25,10 @@
 				<div class="collapse show" id="home-collapse">
 					<ul class="btn-toggle-nav list-unstyled fw-normal pb-1">
 						<li class="nav-item">
-							<a href="{{path('Userslist')}}" class="nav-link rounded">Liste des Agents</a>
+							<a href="{{path('register')}}" class="nav-link rounded">Ajouter un agents</a>
 						</li>
 						<li class="nav-item">
-							<a href="#" class="nav-link rounded">Updates</a>
+							<a href="{{path('Userslist')}}" class="nav-link rounded">Liste des Agents</a>
 						</li>
 						<li class="nav-item">
 							<a href="#" class="nav-link  rounded">Reports</a>
@@ -43,10 +43,10 @@
 				<div class="collapse" id="enterprise-collapse">
 					<ul class="btn-toggle-nav list-unstyled fw-normal pb-1">
 						<li class="nav-item">
-							<a href="#" class="nav-link rounded">Overview</a>
+							<a href="{{path('Entreprise')}}" class="nav-link rounded">Ajouter une entreprise</a>
 						</li>
 						<li class="nav-item">
-							<a href="#" class="nav-link rounded">Updates</a>
+							<a href="{{path('EntrepriseList')}}" class="nav-link rounded">Liste des entreprises</a>
 						</li>
 						<li class="nav-item">
 							<a href="#" class="nav-link  rounded">Reports</a>
