--- a/templates/home/content.html.twig
+++ b/templates/home/content.html.twig
@@ -1,33 +1,123 @@
 <!-- Container fluid -->
 <div class="main pt-10 pb-21"></div>
 <div class="container-fluid mt-n22 px-6">
-	<div
-		class="col-xl-3 col-lg-6 col-md-12 col-12 mt-6">
-		<!-- card -->
+	<div class="row">
 		<div
-			class="card rounded-3">
-			<!-- card body -->
+			class="col-xl-3 col-lg-6 col-md-12 col-12 mt-6">
+			<!-- card -->
 			<div
-				class="card-body">
-				<!-- heading -->
-				<div class="d-flex justify-content-between align-items-center mb-3">
-					<div>
-						<h4 class="mb-0">MARKETEURS</h4>
+				class="card rounded-3">
+				<!-- card body -->
+				<div
+					class="card-body">
+					<!-- heading -->
+					<div class="d-flex justify-content-between align-items-center mb-3">
+						<div>
+							<h4 class="mb-0">MARKETEURS</h4>
+						</div>
+						<div class="icon-shape icon-md bg-light  rounded-1">
+							<i class="bi bi-people fs-4"></i>
+						</div>
 					</div>
-					<div class="icon-shape icon-md bg-light  rounded-1">
-						<i class="bi bi-people fs-4"></i>
+					<!-- project number -->
+					<div>
+						<a href="{{path('Userslist')}}">
+							<h1 class="fw-bold">{{Users}}</h1>
+						</a>
+						<p
+							class="mb-0">{# <span class="text-dark me-2"></span>Completed #}
+						</p>
 					</div>
 				</div>
-				<!-- project number -->
-				<div>
-					<a href="{{path('Userslist')}}">
-						<h1 class="fw-bold">{{Users}}</h1>
-					</a>
-					<p
-						class="mb-0">{# <span class="text-dark me-2"></span>Completed #}
-					</p>
+			</div>
+		</div>
+		<div
+			class="col-xl-3 col-lg-6 col-md-12 col-12 mt-6">
+			<!-- card -->
+			<div
+				class="card rounded-3">
+				<!-- card body -->
+				<div
+					class="card-body">
+					<!-- heading -->
+					<div class="d-flex justify-content-between align-items-center mb-3">
+						<div>
+							<h4 class="mb-0">ENTREPRISE</h4>
+						</div>
+						<div class="icon-shape icon-md bg-light  rounded-1">
+							<i class="bi bi-shop fs-4"></i>
+						</div>
+					</div>
+					<!-- project number -->
+					<div>
+						<a href="{{path('Userslist')}}">
+							<h1 class="fw-bold">{{CountEntreprise}}</h1>
+						</a>
+						<p
+							class="mb-0">{# <span class="text-dark me-2"></span>Completed #}
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div
+			class="col-xl-3 col-lg-6 col-md-12 col-12 mt-6">
+			<!-- card -->
+			<div
+				class="card rounded-3">
+				<!-- card body -->
+				<div
+					class="card-body">
+					<!-- heading -->
+					<div class="d-flex justify-content-between align-items-center mb-3">
+						<div>
+							<h4 class="mb-0">PROSPECTIONS</h4>
+						</div>
+						<div class="icon-shape icon-md bg-light  rounded-1">
+							<i class="bi bi-people fs-4"></i>
+						</div>
+					</div>
+					<!-- project number -->
+					<div>
+						<a href="{{path('Userslist')}}">
+							<h1 class="fw-bold">{{CountProspect}}</h1>
+						</a>
+						<p
+							class="mb-0">{# <span class="text-dark me-2"></span>Completed #}
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div
+			class="col-xl-3 col-lg-6 col-md-12 col-12 mt-6">
+			<!-- card -->
+			<div
+				class="card rounded-3">
+				<!-- card body -->
+				<div
+					class="card-body">
+					<!-- heading -->
+					<div class="d-flex justify-content-between align-items-center mb-3">
+						<div>
+							<h4 class="mb-0">Rendez-Vous</h4>
+						</div>
+						<div class="icon-shape icon-md bg-light  rounded-1">
+							<i class="bi bi-people fs-4"></i>
+						</div>
+					</div>
+					<!-- project number -->
+					<div>
+						<a href="{{path('Userslist')}}">
+							<h1 class="fw-bold">{{CountRdv}}</h1>
+						</a>
+						<p
+							class="mb-0">{# <span class="text-dark me-2"></span>Completed #}
+						</p>
+					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-</div></div>
+
+</div>
